<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/product_bottom_share"
        style="@style/ColorButtonStyle"
        android:layout_marginLeft="3dp"
        android:layout_weight="1"
        android:background="@drawable/bg_nocornervioletbtn"
        android:drawableLeft="@drawable/share_img_left"
        android:text="@string/product_share" />

    <TextView
        android:id="@+id/product_bottom_showaddcar"
        style="@style/ColorButtonStyle"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_nocornerscolorbtn"
        android:text="@string/product_add_car" />

    <TextView
        android:id="@+id/product_bottom_order"
        style="@style/ColorButtonStyle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:layout_weight="1"
        android:background="@drawable/bg_nocornerscolorbtn"
        android:text="@string/product_pay" />

</LinearLayout>