<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/findservice_onleservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="5dp" >

        <TextView
            android:id="@+id/findservice_online_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/findservice_online_title"
            android:textColor="@color/deeporange" />

        <TextView
            android:id="@+id/findservice_online_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findservice_online_title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/findservice_online_info_title" />

        <TextView
            android:id="@+id/findservice_online_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findservice_online_title"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/findservice_online_info_title"
            android:text="@string/findservice_online_info"
            android:textColor="@color/deeporange" />

        <com.jmz.view.TileTextView
            android:id="@+id/findservice_online_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findservice_online_info"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/qq1"
            android:gravity="center"
            android:text="@string/findservice_online_one" />

        <com.jmz.view.TileTextView
            android:id="@+id/findservice_online_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/findservice_online_info"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/qq1"
            android:gravity="center"
            android:text="@string/findservice_online_two" />
    </RelativeLayout>

    <ListView
        android:id="@+id/findservice_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/findservice_layout"
        android:layout_below="@+id/findservice_onleservice"
        android:background="@null"
        android:cacheColorHint="#0000"
        android:divider="@null"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:stackFromBottom="false"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:id="@+id/findservice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >

        <EditText
            android:id="@+id/findservice_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/findservice_hint"
            android:padding="7dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/findservice_send"
            style="@style/ColorButtonStyle"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/findservice_send" />
    </LinearLayout>

</RelativeLayout>