<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal" 
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <com.jmz.view.MyTextView
            android:id="@+id/sharemoney_listadater_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:maxLines="1"
            android:text="@string/sharemoney_add" />


        <TextView
            android:id="@+id/sharemoney_listadater_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/sharemoney_time"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sharemoney_listadater_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/sharemoney_simplemoney" />

        <TextView
            android:id="@+id/sharemoney_listadater_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/sharemoney_state_use"
            android:textColor="@color/gray" />
    </LinearLayout>

</LinearLayout>